# play-with-Pool

./: .gitignore  CMakeLists.txt  CommonConnectionPool.cpp  CommonConnectionPool.h  Connection.h  README.md  main.cpp
内存池/: README.md  ngx_testpool.c
内存池/nginx_memory_pool/: CMakeLists.txt  main.cpp  nginx_mem_pool.cpp  nginx_mem_pool.h
内存池/stl_alloc/: CMakeLists.txt  README.md  realloc.h  stl_mem_pool.h  test_stl_allocator.cpp
对象池/: CMakeLists.txt  Mynew.cpp  对象池.cpp
线程池项目/: CMakeLists.txt  README.md  main.cpp  threadpool.cpp  threadpool.h
连接池/: .gitignore  CommonConnectionPool.cpp  Connection.cpp  README.md  mysql.ini
